--- a/profile.html
+++ b/profile.html
@@ -29,22 +29,28 @@
       <h2>Personal Rate of Return</h2>
       </div>
       <div class='col-sm-4 col-sm-offset-2'>
-        <label class='select-label plan-select'>
-        <select>
-            <option value='totalReturn'>Kelly's (401k) Test Plan</option>
-            <option value='option2'>Option 2</option>
-        </select>
-        </label>
+        <form name='planSelect'>
+          <label class='select-label plan-select'>
+          <select>
+              <option value='totalReturn'>Kelly's (401k) Test Plan</option>
+              <option value='option2'>Option 2</option>
+          </select>
+          </label>
+          <input type='submit' value='submit' class='hidden'>
+        </form>
       </div>
     </div>
     <div class='row'>
-      <div>
-        <label class='select-label'>Select Investment Type:
-        <select>
-            <option value='totalReturn'>Total Return</option>
-            <option value='option2'>Option 2</option>
-        </select>
-        </label>
+      <div class='col-xs-6'>
+        <form name='investmentType'>
+          <label class='select-label'>Select Investment Type:
+          <select>
+              <option value='totalReturn'>Total Return</option>
+              <option value='option2'>Option 2</option>
+          </select>
+          </label>
+          <input type='submit' value='submit' class='hidden'>
+        </form>
       </div>
     </div>
 
@@ -68,7 +74,7 @@
 
     <div class='row'>
       <div class='col-sm-6'>
-        <table id='rateOfReturnTable'>
+        <table id='rateOfReturnTable' class='table table-condensed table-responsive'>
           <thead>
             <tr>
               <th>Year Ending</th>
