Added more fields to profile

--- a/rateofReturn.html
+++ b/rateofReturn.html
@@ -70,7 +70,7 @@
     </nav>
 
     <div class='row'>
-      <p class='description'>Sopme things in here.............</p>
+      <p class='description'>Some things in here.............</p>
       <form name='rateofReturnDateRange'>
         <label>Select Date Range:</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* Begin Date</span></div>
         <label>to</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* End Date</span></div>
