--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,8 @@
       </div>
     </div>
 
+    <form id='profileForm' name=''>
+
     <div class='collapsable'>
       <div class='row collapsable-header' data-target='#personalInfo'>
         <div class='col-sm-12'>
@@ -56,25 +58,68 @@
       </div>
       <hr />
       <div class='row collapsable-content' id='personalInfo'>
-        <div class='col-sm-2'>
-          <div class='inputWrapper'>
-          <label class='select-label'>
-            <select class='mini'>
-                <option value='totalReturn'>Mr.</option>
-                <option value='option2'>Ms.</option>
-            </select>
-          </label>
-          
-            <span> Prefix</span>
+
+        <div class='col-xs-12'> <!-- Form control 1 -->
+          <div class='row'>
+            <div class='col-sm-2'>
+              <label class='select-label'>
+                <select class='mini'>
+                    <option value='totalReturn'>Mr.</option>
+                    <option value='option2'>Ms.</option>
+                </select>
+              </label>
+              <div class='inputWrapper'>
+                <span> Prefix</span>
+              </div>
+            </div>
+            <div class='col-sm-3'>
+              <label></label>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>First Name</span>
+              </div>
+            </div>
+             <div class='col-sm-3'>
+              <label></label>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>Middle</span>
+              </div>
+            </div>
+
+            <div class='col-sm-3'>
+              <label></label>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>Last Name</span>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class='col-sm-4'>
-          <label></label>
-          <div class='inputWrapper'>
-            <input type='text' name=''>
-            <span>* First Name</span>
+        </div> <!-- end form control 1 -->
+
+        <div class='col-xs-12'> <!-- Form control 2 -->
+          <div class='row'>
+            <div class='col-sm-5'>
+              <label class='select-label'>
+                <select class='mini'>
+                    <option value='totalReturn'>Married</option>
+                    <option value='option2'>Divorced</option>
+                    <option value='option2'>Seeing a 'Slam Piece' on the side</option>
+                </select>
+              </label>
+              <div class='inputWrapper'>
+                <span class='required'>Maritial Status</span>
+              </div>
+            </div>
+            <div class='col-sm-3'>
+              <label></label>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>Gender</span>
+              </div>
+            </div>
           </div>
-        </div>
+        </div> <!-- end form control 2 -->
 
       </div> <!-- end #personalInfo -->
       <div class='row collapsable-header' data-target='#email'>
@@ -107,8 +152,9 @@
       <div class='row collapsable-content' id='summary'>
         Personal stuff all up in here
       </div>
-    </div>
+    </div> <!-- end collapsable -->
 
+  </form>
       
   </div><!-- end #page -->
 
