Added and styled radio buttons for email selection

--- a/profile.html
+++ b/profile.html
@@ -227,7 +227,99 @@
       </div>
       <hr />
       <div class='row collapsable-content' id='email'>
-        Personal stuff all up in here
+
+        <div class='col-xs-12'> <!-- Form control 1 -->
+          <div class='row'>
+            <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>Home Email Address</span>
+              </div>
+            </div>
+             <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span class='required'>Confirm Home Email Address</span>
+              </div>
+            </div>
+          </div>
+        </div> <!-- end form control 1 -->
+        <div class='col-xs-12'> <!-- Form control 2 -->
+          <div class='row'>
+            <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span>Office Email Address</span>
+              </div>
+            </div>
+             <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span>Confirm Office Email Address</span>
+              </div>
+            </div>
+          </div>
+        </div> <!-- end form control 2 -->
+        <div class='col-xs-12'> <!-- Form control 3 -->
+          <div class='row'>
+            <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span>Other Email Address</span>
+              </div>
+            </div>
+             <div class='col-sm-5'>
+              <div class='inputWrapper'>
+                <input type='text' name=''>
+                <span>Confirm Other Email Address</span>
+              </div>
+            </div>
+          </div>
+        </div> <!-- end form control 3 -->
+        <div class='col-xs-12'> <!-- Form control 4 -->
+          <div class='row'>
+            <div class='col-sm-6'>
+              <p class='description'> Where would you like your emails sent? Select an option below.</p>
+            </div>
+          </div>
+          <div class='row'>
+            <div class='col-xs-5 col-xs-offset-1'>
+              <div class='radio-group'>
+                <label>
+                  <span class='face-off'></span>
+                  <input type="radio" name="emailAddress" value="home"><span class='face-on'></span><br>
+                  <span class='radiolabel'>Home</span>
+                </label>
+              
+                <label>
+                  <span class='face-off'></span>
+                  <input type="radio" name="emailAddress" value="office"><span class='face-on'></span><br>
+                  <span class='radiolabel'>Office</span>
+                </label>
+                <label>
+                  <span class='face-off'></span>
+                  <input type="radio" name="emailAddress" value="other"><span class='face-on'></span><br>
+                  <span class='radiolabel'>Other</span>
+                </label>
+                <label>
+                  <span class='face-off'></span>
+                  <input type="radio" name="emailAddress" value="none"><span class='face-on'></span><br>
+                  <span class='radiolabel'>None</span>
+                </label>
+              </div>
+            </div>
+            <div class='col-xs-5 col-xs-offset-1'>
+              <div class='radio-group'>
+                <label>
+                  <span class='face-off'></span>
+                  <input type="radio" name="emailAddress" value="donthave"><span class='face-on'></span><br>
+                  <span class='radiolabel long'>I do not have an email address.</span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
       <div class='row collapsable-header' data-target='#securityQuestion'>
         <div class='col-sm-12'>
