Added SVG to radio buttons

--- a/profile.html
+++ b/profile.html
@@ -110,12 +110,26 @@
                <div class='radio-group gender row short'>
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="gender" value="male"><span class='face-on'></span>
+                  <input type="radio" name="gender" value="male">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span>
                   <span class='radiolabel'>Male</span>
                 </label>
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="gender" value="female"><span class='face-on'></span>
+                  <input type="radio" name="gender" value="female">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span>
                   <span class='radiolabel'>Female</span>
                 </label>
                 <div class='inputWrapper'>
@@ -293,28 +307,56 @@
               <p class='description'> Where would you like your emails sent? Select an option below.</p>
             </div>
           </div>
-          <div class='row'>
+          <div class='row short'>
             <div class='col-xs-5 col-xs-offset-1'>
-              <div class='radio-group row'>
+              <div class='radio-group row short'>
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="emailAddress" value="home"><span class='face-on'></span><br>
+                  <input type="radio" name="emailAddress" value="home">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span><br>
                   <span class='radiolabel'>Home</span>
                 </label>
               
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="emailAddress" value="office"><span class='face-on'></span><br>
+                  <input type="radio" name="emailAddress" value="office">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span><br>
                   <span class='radiolabel'>Office</span>
                 </label>
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="emailAddress" value="other"><span class='face-on'></span><br>
+                  <input type="radio" name="emailAddress" value="other">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span><br>
                   <span class='radiolabel'>Other</span>
                 </label>
                 <label class='col-sm-1'>
                   <span class='face-off'></span>
-                  <input type="radio" name="emailAddress" value="none"><span class='face-on'></span><br>
+                  <input type="radio" name="emailAddress" value="none">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span><br>
                   <span class='radiolabel'>None</span>
                 </label>
               </div>
@@ -323,7 +365,14 @@
               <div class='radio-group'>
                 <label>
                   <span class='face-off'></span>
-                  <input type="radio" name="emailAddress" value="donthave"><span class='face-on'></span><br>
+                  <input type="radio" name="emailAddress" value="donthave">
+                  <span class='face-on'>
+                    <svg version="1.1" id="Layer_1" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"  xml:space="preserve" preserveAspectRatio="xMinYMin meet" width="23px" height="23px" xmlns="http://www.w3.org/2000/svg">
+                      <g>
+                        <path d="M256,48C141.1,48,48,141.1,48,256s93.1,208,208,208c114.9,0,208-93.1,208-208S370.9,48,256,48z M223.9,329.7c-2.4,2.4-5.8,4.4-8.8,4.4s-6.4-2.1-8.9-4.5l-56-56l17.8-17.8l47.2,47.2l124.8-125.7l17.5,18.1L223.9,329.7z"/>
+                      </g>
+                    </svg>
+                  </span><br>
                   <span class='radiolabel long'>I do not have an email address.</span>
                 </label>
               </div>
@@ -426,11 +475,6 @@
       <hr />
       <div class='row collapsable-content' id='summary'>
         Personal stuff all up in here
-
-        <span class='slider-toggle-label'>On</span>
-        <div class='slider-toggle'></div>
-        <span class='slider-toggle-label'>Off</span>
-
 
       </div>
     </div> <!-- end collapsable -->
