Added form submit and reset

--- a/profile.html
+++ b/profile.html
@@ -474,12 +474,19 @@
       </div>
       <hr />
       <div class='row collapsable-content' id='summary'>
-        Personal stuff all up in here
+          
 
       </div>
     </div> <!-- end collapsable -->
 
-  </form>
+    <div class='form-controls'>
+      <div class='row'>
+        <button type='submit'>Submit</button>
+        <button type='reset'>Reset</button>
+      </div>
+    </div>
+
+  </form> <!-- end #profileForm -->
       
   </div><!-- end #page -->
 
