Added values to form controls

--- a/profile.html
+++ b/profile.html
@@ -481,8 +481,8 @@
 
     <div class='form-controls'>
       <div class='row'>
-        <button type='submit'>Submit</button>
-        <button type='reset'>Reset</button>
+        <button type='submit' value='submit'>Submit</button>
+        <button type='reset' value='reset'>Reset</button>
       </div>
     </div>
 
