Fixed spacing issue in personal info

--- a/profile.html
+++ b/profile.html
@@ -188,7 +188,7 @@
         <div class='col-xs-12'> <!-- Form control 5 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='row'>
+              <div class='row short'>
                 <div class='col-xs-4'>
                   <div class='inputWrapper'>
                     <input type='text' name=''>
@@ -209,7 +209,7 @@
         <div class='col-xs-12'> <!-- Form control 6 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='row'>
+              <div class='row short'>
                 <div class='col-xs-4'>
                   <div class='inputWrapper'>
                     <input type='text' name=''>
