styled a tags to look like buttons

--- a/profile.html
+++ b/profile.html
@@ -481,8 +481,8 @@
 
     <div class='form-controls'>
       <div class='row'>
-        <button type='submit' value='submit'>Submit</button>
-        <button type='reset' value='reset'>Reset</button>
+        <a class='button submit' href=''>Submit</a>
+        <a class='button reset' href=''>Reset</a>
       </div>
     </div>
 
