Changes submit button to an A tag

--- a/rateofReturn.html
+++ b/rateofReturn.html
@@ -74,7 +74,7 @@
       <form name='rateofReturnDateRange'>
         <label>Select Date Range:</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* Begin Date</span></div>
         <label>to</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* End Date</span></div>
-        <input type='submit' class='date-submit'>
+        <a class='date-submit button submit' href=''></a>
       </form>
     </div>
 
