--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="resources/css/vendor/bootstrap.min.css">
 
     <!-- <link rel="stylesheet/less" href="resources/css/glyphicons.less"> -->
-    <!-- <link rel="stylesheet/less" href="resources/css/main.less"> -->
+    <link rel="stylesheet/less" href="resources/css/main.less">
     <link rel="stylesheet" href="resources/css/glyphicons.min.css">
-    <link rel="stylesheet" href="resources/css/main.min.css">
+    <!-- <link rel="stylesheet" href="resources/css/main.min.css"> -->
     
     <script src="resources/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="resources/js/vendor/jquery-1.10.2.min.js"></script>
@@ -50,7 +50,7 @@
     </header>
 
 
-    <nav class='mainNav top-side' role='navigation'>
+    <nav class='mainNav top-top' role='navigation'>
       <ul class='mainmenu'>
         <li class='active'>
           <div>
@@ -274,7 +274,7 @@
 
     <div class='page-content'></div>
 
-    <footer class='top-side'>
+    <footer class=''>
 
       <div class='col3'>
 
@@ -396,7 +396,7 @@
     </footer>
 
   
-  <!-- <script src="resources/js/vendor/less.min.js" type="text/javascript"></script> -->
+  <script src="resources/js/vendor/less.min.js" type="text/javascript"></script>
 
   </body>
 </html>
