--- a/profile2.html
+++ b/profile2.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="resources/css/normalize.css">
     <link rel="stylesheet" href="resources/css/vendor/datepicker.css">
     <link rel="stylesheet" href="resources/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet/less" href="resources/css/main.less">
+    <link rel="stylesheet" href="resources/css/main2.css">
+    <!-- <link rel="stylesheet" href="resources/css/main.less"> -->
      <!-- <link rel="stylesheet" href="resources/css/vendor/datepicker.css"> -->
     <script src="resources/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="resources/js/vendor/jquery-1.10.2.min.js"></script>
@@ -489,6 +490,8 @@
   </form> <!-- end #profileForm -->
       
   </div><!-- end #page -->
-<script src="resources/js/vendor/less.min.js" type="text/javascript"></script>
+
+   <script src="resources/js/vendor/less.min.js" type="text/javascript"></script>
+
   </body>
 </html>
