Updated LESS with all old POC CSS

--- a/rateofReturn2.html
+++ b/rateofReturn2.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="resources/css/normalize.css">
     <link rel="stylesheet" href="resources/css/vendor/datepicker.css">
     <link rel="stylesheet" href="resources/css/vendor/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="resources/css/main.css"> -->
-    <link rel="stylesheet/less" href="resources/css/main.less">
+    <link rel="stylesheet" href="resources/css/main2.css">
      <!-- <link rel="stylesheet" href="resources/css/vendor/datepicker.css"> -->
     <script src="resources/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="resources/js/vendor/jquery-1.10.2.min.js"></script>
@@ -61,7 +60,8 @@
     </div>
 
     <hr />
-    <nav id='local' class='tabbed'>
+
+    <nav id='local'>
       <ul>
         <li class='active'>Annual</li>
         <li>Quarterly</li>
@@ -71,7 +71,7 @@
 
     <div class='row'>
       <p class='description'>Some things in here.............</p>
-      <form id='rateofReturnDateRangeForm' name='rateofReturnDateRange'>
+      <form name='rateofReturnDateRange'>
         <label>Select Date Range:</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* Begin Date</span></div>
         <label>to</label><div class='inputWrapper'><input type='text' class='datepicker'><span>* End Date</span></div>
         <a class='date-submit button submit' href=''></a>
