--- a/profile.html
+++ b/profile.html
@@ -72,19 +72,19 @@
               </div>
             </div>
             <div class='col-sm-3'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name='' value="Can't touch this" class='disabled'>
                 <span class='required'>First Name</span>
               </div>
             </div>
              <div class='col-sm-3'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Middle</span>
               </div>
             </div>
             <div class='col-sm-3'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Last Name</span>
               </div>
@@ -102,7 +102,7 @@
                     <option value='slamPiece'>Seeing a 'Slam Piece' on the side</option>
                 </select>
               </label>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <span class='required'>Maritial Status</span>
               </div>
             </div>
@@ -132,7 +132,7 @@
                   </span>
                   <span class='radiolabel'>Female</span>
                 </label>
-                <div class='inputWrapper'>
+                <div class='inputWrapper full'>
                   <span class='required'>Gender</span>
                 </div>
               </div>
@@ -143,13 +143,13 @@
         <div class='col-xs-12'> <!-- Form control 3 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Street Address 1</span>
               </div>
             </div>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span>Street Address 2</span>
               </div>
@@ -160,7 +160,7 @@
         <div class='col-xs-12'> <!-- Form control 4 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>City</span>
               </div>
@@ -190,13 +190,13 @@
             <div class='col-sm-5'>
               <div class='row short'>
                 <div class='col-xs-4'>
-                  <div class='inputWrapper'>
+                  <div class='inputWrapper mini'>
                     <input type='text' name=''>
                     <span class='required'>Home Phone</span>
                   </div>
                 </div>
                 <div class='col-xs-4'>
-                    <input class='mini' type='text' name=''>
+                    <input type='text' name=''>
                 </div>
                 <div class='col-xs-4'>
                     <input type='text' name=''>
@@ -256,13 +256,13 @@
         <div class='col-xs-12'> <!-- Form control 1 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Home Email Address</span>
               </div>
             </div>
              <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Confirm Home Email Address</span>
               </div>
@@ -272,13 +272,13 @@
         <div class='col-xs-12'> <!-- Form control 2 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span>Office Email Address</span>
               </div>
             </div>
              <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span>Confirm Office Email Address</span>
               </div>
@@ -288,13 +288,13 @@
         <div class='col-xs-12'> <!-- Form control 3 -->
           <div class='row'>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span>Other Email Address</span>
               </div>
             </div>
              <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span>Confirm Other Email Address</span>
               </div>
@@ -414,13 +414,13 @@
               </div>
             </div>
             <div class='col-sm-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name='' value=''>
                 <span class='required'>Answer</span>
               </div>
             </div>
              <div class='col-sm-5 col-sm-offset-2'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Answer</span>
               </div>
@@ -452,13 +452,13 @@
               </div>
             </div>
             <div class='col-xs-5'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name='' value=''>
                 <span class='required'>Answer</span>
               </div>
             </div>
              <div class='col-xs-5 col-xs-offset-2'>
-              <div class='inputWrapper'>
+              <div class='inputWrapper full'>
                 <input type='text' name=''>
                 <span class='required'>Answer</span>
               </div>
